# CSB53

./: .gitignore  README.md  env.example.json  pyproject.toml  temporary_graph_plots.py
02 - Analise exploratoria/: plots.txt
02 - Analise exploratoria/src/: README.md
data/: all_data.json
data/billboard/: .gitignore  all_years.csv
data/grammy/: albums_of_the_year.csv
data/metacritic/: .gitignore  all_albums_data.json  all_years.csv  billboard_urls.csv  grammies_albums.csv  grammies_urls.csv  grammies_urls_treated.csv
data/spotify/: albums_to_search.csv
grammy/: __init__.py  billboard.py  defines.py  grammy.py  html.py  metacritic.py  spotify.py  utils.py
notebooks/: albums_dist_to_clusters.csv  genres_analysis.ipynb  genres_clusters.json  genres_clusters_analysis.ipynb  genres_data_analysis.ipynb  genres_dist_matrix.csv  graph_plots.ipynb  graph_plots_joined_data.ipynb
scripts/: billboard_albums_metacritic_save_url.py  billboard_best_albums_download.py  billboard_best_albums_extract.py  extract_metacritic_best_albuns.py  get_metacritic_best_albuns.py  grammy_albums_metacritic_download.py  grammy_albums_metacritic_extract.py  grammy_albums_metacritic_save_url.py  graph_plots.py  join_data.py  logistic_regression.py  metacritic_albums_page_get_data.py  metacritic_best_albuns_download.py  spotify_update_albums_get_data.py
scripts/billboard/: albums_metacritic_download.py  albums_metacritic_save_url.py
scripts/data/billboard/: all_years.csv  billboard_scrap_year_2000.csv  billboard_scrap_year_2001.csv  billboard_scrap_year_2002.csv  billboard_scrap_year_2003.csv  billboard_scrap_year_2004.csv  billboard_scrap_year_2005.csv  billboard_scrap_year_2006.csv  billboard_scrap_year_2007.csv  billboard_scrap_year_2008.csv  billboard_scrap_year_2009.csv  (+11 more)
scripts/grammy/: albums_metacritic_download.py
scripts/metacritic/: albums_page_download.py  albums_page_extract.py  best_albums_download.py  best_albums_extract.py
(+22 files in other folders)
